fix not showing date in firefox

--- a/hiddifypanel/static/css/custom.css
+++ b/hiddifypanel/static/css/custom.css
@@ -38,7 +38,7 @@ legend {
   }
 
   .modal{
-    z-index: 4999;
+    /* z-index: 4999; */
   }
   .daterangepicker {
     z-index: 5000;
